--- a/public/index.html
+++ b/public/index.html
@@ -1,18 +1,1 @@
-<!DOCTYPE html>
-<html lang="">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" rel="stylesheet">
-    <link rel="icon" href="<%= BASE_URL %>favicon.png">
-    <title>btc by data</title>
-  </head>
-  <body>
-    <noscript>
-      <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
-    </noscript>
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
-  </body>
-</html>
+<!doctype html><html lang=""><head><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" rel="stylesheet"><link rel="icon" href="/favicon.png"><title>btc by data</title><script defer="defer" src="/js/chunk-vendors.eb4af2e0.js"></script><script defer="defer" src="/js/app.7ab39b56.js"></script><link href="/css/chunk-vendors.2fbfcc24.css" rel="stylesheet"><link href="/css/app.91dcd31a.css" rel="stylesheet"></head><body><noscript><strong>We're sorry but btcbd_front doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id="app"></div></body></html>
